# kk

./: Cargo.toml
.config/: based.toml
kk-bin/: Cargo.toml
kk-bin/src/: config.rs  editor.rs  main.rs
kk-bin/src/commands/: fun.rs  mod.rs
kk-bin/src/keymap/: DESIGN.md  input.rs  key.rs  map.rs  mod.rs  tree.rs
kk-bin/src/ui/: mod.rs
kk-core/: Cargo.toml
kk-core/src/: lib.rs
